// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChallengeDetailsScreen should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UNDEFINED
    challengeType="meditation"
    currentWorld={0}
    duration="50 seconds"
    error=""
    isLoading={false}
    milestones={
      Array [
        Object {
          "reward": 2,
          "target": 5,
        },
      ]
    }
    onPressClose={[MockFunction]}
    onPressCta={[MockFunction]}
    unit="seconds"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Close
          onPress={[MockFunction]}
        />,
        <Image
          source={1}
          style={
            Object {
              "marginTop": -100,
            }
          }
        />,
        <View
          style={
            Object {
              "backgroundColor": "rgb(235, 255, 244)",
              "padding": 40,
              "width": 570,
            }
          }
        >
          <YuText
            bold={true}
            style={
              Object {
                "color": "rgb(51,51,51)",
                "fontSize": 50,
                "marginBottom": 20,
              }
            }
          >
            meditation / 50 seconds
          </YuText>
          <Milestones
            milestones={
              Array [
                Object {
                  "reward": 2,
                  "target": 5,
                },
              ]
            }
            unit="seconds"
          />
        </View>,
        <Button
          disabled={false}
          isLoading={false}
          label="take challenge"
          onPress={[MockFunction]}
          type="Primary"
          wrapperStyle={
            Object {
              "marginTop": -8,
            }
          }
        />,
        <YuText
          style={
            Object {
              "color": "rgb(170,170,170)",
              "fontSize": 32,
              "marginTop": 48,
            }
          }
        >
          
        </YuText>,
        null,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255,255,255,0.7)",
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "source": 1,
          "style": Object {
            "marginTop": -100,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <YuText
              bold={true}
              style={
                Object {
                  "color": "rgb(51,51,51)",
                  "fontSize": 50,
                  "marginBottom": 20,
                }
              }
            >
              meditation / 50 seconds
            </YuText>,
            <Milestones
              milestones={
                Array [
                  Object {
                    "reward": 2,
                    "target": 5,
                  },
                ]
              }
              unit="seconds"
            />,
          ],
          "style": Object {
            "backgroundColor": "rgb(235, 255, 244)",
            "padding": 40,
            "width": 570,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bold": true,
              "children": "meditation / 50 seconds",
              "style": Object {
                "color": "rgb(51,51,51)",
                "fontSize": 50,
                "marginBottom": 20,
              },
            },
            "ref": null,
            "rendered": "meditation / 50 seconds",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "milestones": Array [
                Object {
                  "reward": 2,
                  "target": 5,
                },
              ],
              "unit": "seconds",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "disabled": false,
          "isLoading": false,
          "label": "take challenge",
          "onPress": [MockFunction],
          "type": "Primary",
          "wrapperStyle": Object {
            "marginTop": -8,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "",
          "style": Object {
            "color": "rgb(170,170,170)",
            "fontSize": 32,
            "marginTop": 48,
          },
        },
        "ref": null,
        "rendered": "",
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Close
            onPress={[MockFunction]}
          />,
          <Image
            source={1}
            style={
              Object {
                "marginTop": -100,
              }
            }
          />,
          <View
            style={
              Object {
                "backgroundColor": "rgb(235, 255, 244)",
                "padding": 40,
                "width": 570,
              }
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "color": "rgb(51,51,51)",
                  "fontSize": 50,
                  "marginBottom": 20,
                }
              }
            >
              meditation / 50 seconds
            </YuText>
            <Milestones
              milestones={
                Array [
                  Object {
                    "reward": 2,
                    "target": 5,
                  },
                ]
              }
              unit="seconds"
            />
          </View>,
          <Button
            disabled={false}
            isLoading={false}
            label="take challenge"
            onPress={[MockFunction]}
            type="Primary"
            wrapperStyle={
              Object {
                "marginTop": -8,
              }
            }
          />,
          <YuText
            style={
              Object {
                "color": "rgb(170,170,170)",
                "fontSize": 32,
                "marginTop": 48,
              }
            }
          >
            
          </YuText>,
          null,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "rgba(255,255,255,0.7)",
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": 1,
            "style": Object {
              "marginTop": -100,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                bold={true}
                style={
                  Object {
                    "color": "rgb(51,51,51)",
                    "fontSize": 50,
                    "marginBottom": 20,
                  }
                }
              >
                meditation / 50 seconds
              </YuText>,
              <Milestones
                milestones={
                  Array [
                    Object {
                      "reward": 2,
                      "target": 5,
                    },
                  ]
                }
                unit="seconds"
              />,
            ],
            "style": Object {
              "backgroundColor": "rgb(235, 255, 244)",
              "padding": 40,
              "width": 570,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "meditation / 50 seconds",
                "style": Object {
                  "color": "rgb(51,51,51)",
                  "fontSize": 50,
                  "marginBottom": 20,
                },
              },
              "ref": null,
              "rendered": "meditation / 50 seconds",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "milestones": Array [
                  Object {
                    "reward": 2,
                    "target": 5,
                  },
                ],
                "unit": "seconds",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "disabled": false,
            "isLoading": false,
            "label": "take challenge",
            "onPress": [MockFunction],
            "type": "Primary",
            "wrapperStyle": Object {
              "marginTop": -8,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "",
            "style": Object {
              "color": "rgb(170,170,170)",
              "fontSize": 32,
              "marginTop": 48,
            },
          },
          "ref": null,
          "rendered": "",
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`ChallengeDetailsScreen should render with a secondary button 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UNDEFINED
    challengeType="meditation"
    currentWorld={0}
    duration="50 seconds"
    error=""
    isLoading={false}
    milestones={
      Array [
        Object {
          "reward": 2,
          "target": 5,
        },
      ]
    }
    onPressClose={[MockFunction]}
    onPressCta={[MockFunction]}
    onPressSetUp={[MockFunction]}
    unit="seconds"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Close
          onPress={[MockFunction]}
        />,
        <Image
          source={1}
          style={
            Object {
              "marginTop": -100,
            }
          }
        />,
        <View
          style={
            Object {
              "backgroundColor": "rgb(235, 255, 244)",
              "padding": 40,
              "width": 570,
            }
          }
        >
          <YuText
            bold={true}
            style={
              Object {
                "color": "rgb(51,51,51)",
                "fontSize": 50,
                "marginBottom": 20,
              }
            }
          >
            meditation / 50 seconds
          </YuText>
          <Milestones
            milestones={
              Array [
                Object {
                  "reward": 2,
                  "target": 5,
                },
              ]
            }
            unit="seconds"
          />
        </View>,
        <Button
          disabled={false}
          isLoading={false}
          label="take challenge"
          onPress={[MockFunction]}
          type="Primary"
          wrapperStyle={
            Object {
              "marginTop": -8,
            }
          }
        />,
        <Button
          label="set up tutorial"
          onPress={[MockFunction]}
          type="Secondary"
          wrapperStyle={
            Object {
              "marginTop": 30,
            }
          }
        />,
        null,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255,255,255,0.7)",
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "source": 1,
          "style": Object {
            "marginTop": -100,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <YuText
              bold={true}
              style={
                Object {
                  "color": "rgb(51,51,51)",
                  "fontSize": 50,
                  "marginBottom": 20,
                }
              }
            >
              meditation / 50 seconds
            </YuText>,
            <Milestones
              milestones={
                Array [
                  Object {
                    "reward": 2,
                    "target": 5,
                  },
                ]
              }
              unit="seconds"
            />,
          ],
          "style": Object {
            "backgroundColor": "rgb(235, 255, 244)",
            "padding": 40,
            "width": 570,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bold": true,
              "children": "meditation / 50 seconds",
              "style": Object {
                "color": "rgb(51,51,51)",
                "fontSize": 50,
                "marginBottom": 20,
              },
            },
            "ref": null,
            "rendered": "meditation / 50 seconds",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "milestones": Array [
                Object {
                  "reward": 2,
                  "target": 5,
                },
              ],
              "unit": "seconds",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "disabled": false,
          "isLoading": false,
          "label": "take challenge",
          "onPress": [MockFunction],
          "type": "Primary",
          "wrapperStyle": Object {
            "marginTop": -8,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "label": "set up tutorial",
          "onPress": [MockFunction],
          "type": "Secondary",
          "wrapperStyle": Object {
            "marginTop": 30,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Close
            onPress={[MockFunction]}
          />,
          <Image
            source={1}
            style={
              Object {
                "marginTop": -100,
              }
            }
          />,
          <View
            style={
              Object {
                "backgroundColor": "rgb(235, 255, 244)",
                "padding": 40,
                "width": 570,
              }
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "color": "rgb(51,51,51)",
                  "fontSize": 50,
                  "marginBottom": 20,
                }
              }
            >
              meditation / 50 seconds
            </YuText>
            <Milestones
              milestones={
                Array [
                  Object {
                    "reward": 2,
                    "target": 5,
                  },
                ]
              }
              unit="seconds"
            />
          </View>,
          <Button
            disabled={false}
            isLoading={false}
            label="take challenge"
            onPress={[MockFunction]}
            type="Primary"
            wrapperStyle={
              Object {
                "marginTop": -8,
              }
            }
          />,
          <Button
            label="set up tutorial"
            onPress={[MockFunction]}
            type="Secondary"
            wrapperStyle={
              Object {
                "marginTop": 30,
              }
            }
          />,
          null,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "rgba(255,255,255,0.7)",
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": 1,
            "style": Object {
              "marginTop": -100,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                bold={true}
                style={
                  Object {
                    "color": "rgb(51,51,51)",
                    "fontSize": 50,
                    "marginBottom": 20,
                  }
                }
              >
                meditation / 50 seconds
              </YuText>,
              <Milestones
                milestones={
                  Array [
                    Object {
                      "reward": 2,
                      "target": 5,
                    },
                  ]
                }
                unit="seconds"
              />,
            ],
            "style": Object {
              "backgroundColor": "rgb(235, 255, 244)",
              "padding": 40,
              "width": 570,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "meditation / 50 seconds",
                "style": Object {
                  "color": "rgb(51,51,51)",
                  "fontSize": 50,
                  "marginBottom": 20,
                },
              },
              "ref": null,
              "rendered": "meditation / 50 seconds",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "milestones": Array [
                  Object {
                    "reward": 2,
                    "target": 5,
                  },
                ],
                "unit": "seconds",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "disabled": false,
            "isLoading": false,
            "label": "take challenge",
            "onPress": [MockFunction],
            "type": "Primary",
            "wrapperStyle": Object {
              "marginTop": -8,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "set up tutorial",
            "onPress": [MockFunction],
            "type": "Secondary",
            "wrapperStyle": Object {
              "marginTop": 30,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`ChallengeDetailsScreen should render with an error 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UNDEFINED
    challengeType="meditation"
    currentWorld={0}
    duration="50 seconds"
    error="Something happened. Try again later"
    isLoading={false}
    milestones={
      Array [
        Object {
          "reward": 2,
          "target": 5,
        },
      ]
    }
    onPressClose={[MockFunction]}
    onPressCta={[MockFunction]}
    unit="seconds"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Close
          onPress={[MockFunction]}
        />,
        <Image
          source={1}
          style={
            Object {
              "marginTop": -100,
            }
          }
        />,
        <View
          style={
            Object {
              "backgroundColor": "rgb(235, 255, 244)",
              "padding": 40,
              "width": 570,
            }
          }
        >
          <YuText
            bold={true}
            style={
              Object {
                "color": "rgb(51,51,51)",
                "fontSize": 50,
                "marginBottom": 20,
              }
            }
          >
            meditation / 50 seconds
          </YuText>
          <Milestones
            milestones={
              Array [
                Object {
                  "reward": 2,
                  "target": 5,
                },
              ]
            }
            unit="seconds"
          />
        </View>,
        <Button
          disabled={false}
          isLoading={false}
          label="take challenge"
          onPress={[MockFunction]}
          type="Primary"
          wrapperStyle={
            Object {
              "marginTop": -8,
            }
          }
        />,
        <YuText
          style={
            Object {
              "color": "rgb(170,170,170)",
              "fontSize": 32,
              "marginTop": 48,
            }
          }
        >
          
        </YuText>,
        <YuText
          style={
            Object {
              "bottom": 60,
              "color": "rgb(170,170,170)",
              "fontSize": 32,
              "position": "absolute",
              "textAlign": "center",
            }
          }
        >
          Something happened. Try again later
        </YuText>,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255,255,255,0.7)",
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "source": 1,
          "style": Object {
            "marginTop": -100,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <YuText
              bold={true}
              style={
                Object {
                  "color": "rgb(51,51,51)",
                  "fontSize": 50,
                  "marginBottom": 20,
                }
              }
            >
              meditation / 50 seconds
            </YuText>,
            <Milestones
              milestones={
                Array [
                  Object {
                    "reward": 2,
                    "target": 5,
                  },
                ]
              }
              unit="seconds"
            />,
          ],
          "style": Object {
            "backgroundColor": "rgb(235, 255, 244)",
            "padding": 40,
            "width": 570,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bold": true,
              "children": "meditation / 50 seconds",
              "style": Object {
                "color": "rgb(51,51,51)",
                "fontSize": 50,
                "marginBottom": 20,
              },
            },
            "ref": null,
            "rendered": "meditation / 50 seconds",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "milestones": Array [
                Object {
                  "reward": 2,
                  "target": 5,
                },
              ],
              "unit": "seconds",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "disabled": false,
          "isLoading": false,
          "label": "take challenge",
          "onPress": [MockFunction],
          "type": "Primary",
          "wrapperStyle": Object {
            "marginTop": -8,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "",
          "style": Object {
            "color": "rgb(170,170,170)",
            "fontSize": 32,
            "marginTop": 48,
          },
        },
        "ref": null,
        "rendered": "",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Something happened. Try again later",
          "style": Object {
            "bottom": 60,
            "color": "rgb(170,170,170)",
            "fontSize": 32,
            "position": "absolute",
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "Something happened. Try again later",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Close
            onPress={[MockFunction]}
          />,
          <Image
            source={1}
            style={
              Object {
                "marginTop": -100,
              }
            }
          />,
          <View
            style={
              Object {
                "backgroundColor": "rgb(235, 255, 244)",
                "padding": 40,
                "width": 570,
              }
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "color": "rgb(51,51,51)",
                  "fontSize": 50,
                  "marginBottom": 20,
                }
              }
            >
              meditation / 50 seconds
            </YuText>
            <Milestones
              milestones={
                Array [
                  Object {
                    "reward": 2,
                    "target": 5,
                  },
                ]
              }
              unit="seconds"
            />
          </View>,
          <Button
            disabled={false}
            isLoading={false}
            label="take challenge"
            onPress={[MockFunction]}
            type="Primary"
            wrapperStyle={
              Object {
                "marginTop": -8,
              }
            }
          />,
          <YuText
            style={
              Object {
                "color": "rgb(170,170,170)",
                "fontSize": 32,
                "marginTop": 48,
              }
            }
          >
            
          </YuText>,
          <YuText
            style={
              Object {
                "bottom": 60,
                "color": "rgb(170,170,170)",
                "fontSize": 32,
                "position": "absolute",
                "textAlign": "center",
              }
            }
          >
            Something happened. Try again later
          </YuText>,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "rgba(255,255,255,0.7)",
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": 1,
            "style": Object {
              "marginTop": -100,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                bold={true}
                style={
                  Object {
                    "color": "rgb(51,51,51)",
                    "fontSize": 50,
                    "marginBottom": 20,
                  }
                }
              >
                meditation / 50 seconds
              </YuText>,
              <Milestones
                milestones={
                  Array [
                    Object {
                      "reward": 2,
                      "target": 5,
                    },
                  ]
                }
                unit="seconds"
              />,
            ],
            "style": Object {
              "backgroundColor": "rgb(235, 255, 244)",
              "padding": 40,
              "width": 570,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "meditation / 50 seconds",
                "style": Object {
                  "color": "rgb(51,51,51)",
                  "fontSize": 50,
                  "marginBottom": 20,
                },
              },
              "ref": null,
              "rendered": "meditation / 50 seconds",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "milestones": Array [
                  Object {
                    "reward": 2,
                    "target": 5,
                  },
                ],
                "unit": "seconds",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "disabled": false,
            "isLoading": false,
            "label": "take challenge",
            "onPress": [MockFunction],
            "type": "Primary",
            "wrapperStyle": Object {
              "marginTop": -8,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "",
            "style": Object {
              "color": "rgb(170,170,170)",
              "fontSize": 32,
              "marginTop": 48,
            },
          },
          "ref": null,
          "rendered": "",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Something happened. Try again later",
            "style": Object {
              "bottom": 60,
              "color": "rgb(170,170,170)",
              "fontSize": 32,
              "position": "absolute",
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "Something happened. Try again later",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`ChallengeDetailsScreen should render with an image for brisk walk 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UNDEFINED
    challengeType="brisk walk"
    currentWorld={2}
    duration="50 seconds"
    error=""
    isLoading={false}
    milestones={
      Array [
        Object {
          "reward": 2,
          "target": 5,
        },
      ]
    }
    onPressClose={[MockFunction]}
    onPressCta={[MockFunction]}
    unit="steps"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Close
          onPress={[MockFunction]}
        />,
        <Image
          source={1}
          style={
            Object {
              "marginTop": -100,
            }
          }
        />,
        <View
          style={
            Object {
              "backgroundColor": "rgb(255, 253, 231)",
              "padding": 40,
              "width": 570,
            }
          }
        >
          <YuText
            bold={true}
            style={
              Object {
                "color": "rgb(51,51,51)",
                "fontSize": 50,
                "marginBottom": 20,
              }
            }
          >
            brisk walk / 50 seconds
          </YuText>
          <Milestones
            milestones={
              Array [
                Object {
                  "reward": 2,
                  "target": 5,
                },
              ]
            }
            unit="steps"
          />
        </View>,
        <Button
          disabled={false}
          isLoading={false}
          label="take challenge"
          onPress={[MockFunction]}
          type="Primary"
          wrapperStyle={
            Object {
              "marginTop": -8,
            }
          }
        />,
        <YuText
          style={
            Object {
              "color": "rgb(170,170,170)",
              "fontSize": 32,
              "marginTop": 48,
            }
          }
        >
          
        </YuText>,
        null,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255,255,255,0.7)",
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "source": 1,
          "style": Object {
            "marginTop": -100,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <YuText
              bold={true}
              style={
                Object {
                  "color": "rgb(51,51,51)",
                  "fontSize": 50,
                  "marginBottom": 20,
                }
              }
            >
              brisk walk / 50 seconds
            </YuText>,
            <Milestones
              milestones={
                Array [
                  Object {
                    "reward": 2,
                    "target": 5,
                  },
                ]
              }
              unit="steps"
            />,
          ],
          "style": Object {
            "backgroundColor": "rgb(255, 253, 231)",
            "padding": 40,
            "width": 570,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bold": true,
              "children": "brisk walk / 50 seconds",
              "style": Object {
                "color": "rgb(51,51,51)",
                "fontSize": 50,
                "marginBottom": 20,
              },
            },
            "ref": null,
            "rendered": "brisk walk / 50 seconds",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "milestones": Array [
                Object {
                  "reward": 2,
                  "target": 5,
                },
              ],
              "unit": "steps",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "disabled": false,
          "isLoading": false,
          "label": "take challenge",
          "onPress": [MockFunction],
          "type": "Primary",
          "wrapperStyle": Object {
            "marginTop": -8,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "",
          "style": Object {
            "color": "rgb(170,170,170)",
            "fontSize": 32,
            "marginTop": 48,
          },
        },
        "ref": null,
        "rendered": "",
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Close
            onPress={[MockFunction]}
          />,
          <Image
            source={1}
            style={
              Object {
                "marginTop": -100,
              }
            }
          />,
          <View
            style={
              Object {
                "backgroundColor": "rgb(255, 253, 231)",
                "padding": 40,
                "width": 570,
              }
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "color": "rgb(51,51,51)",
                  "fontSize": 50,
                  "marginBottom": 20,
                }
              }
            >
              brisk walk / 50 seconds
            </YuText>
            <Milestones
              milestones={
                Array [
                  Object {
                    "reward": 2,
                    "target": 5,
                  },
                ]
              }
              unit="steps"
            />
          </View>,
          <Button
            disabled={false}
            isLoading={false}
            label="take challenge"
            onPress={[MockFunction]}
            type="Primary"
            wrapperStyle={
              Object {
                "marginTop": -8,
              }
            }
          />,
          <YuText
            style={
              Object {
                "color": "rgb(170,170,170)",
                "fontSize": 32,
                "marginTop": 48,
              }
            }
          >
            
          </YuText>,
          null,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "rgba(255,255,255,0.7)",
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": 1,
            "style": Object {
              "marginTop": -100,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                bold={true}
                style={
                  Object {
                    "color": "rgb(51,51,51)",
                    "fontSize": 50,
                    "marginBottom": 20,
                  }
                }
              >
                brisk walk / 50 seconds
              </YuText>,
              <Milestones
                milestones={
                  Array [
                    Object {
                      "reward": 2,
                      "target": 5,
                    },
                  ]
                }
                unit="steps"
              />,
            ],
            "style": Object {
              "backgroundColor": "rgb(255, 253, 231)",
              "padding": 40,
              "width": 570,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "brisk walk / 50 seconds",
                "style": Object {
                  "color": "rgb(51,51,51)",
                  "fontSize": 50,
                  "marginBottom": 20,
                },
              },
              "ref": null,
              "rendered": "brisk walk / 50 seconds",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "milestones": Array [
                  Object {
                    "reward": 2,
                    "target": 5,
                  },
                ],
                "unit": "steps",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "disabled": false,
            "isLoading": false,
            "label": "take challenge",
            "onPress": [MockFunction],
            "type": "Primary",
            "wrapperStyle": Object {
              "marginTop": -8,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "",
            "style": Object {
              "color": "rgb(170,170,170)",
              "fontSize": 32,
              "marginTop": 48,
            },
          },
          "ref": null,
          "rendered": "",
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
